components/pipeline-service-rd/base/tekton-results/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "0"
    haproxy.router.openshift.io/hsts_header: max-age=63072000
    haproxy.router.openshift.io/timeout: 86410s
    openshift.io/host.generated: "true"
    router.openshift.io/haproxy.health.check.interval: 86400s
  labels:
    app.kubernetes.io/part-of: tekton-results
  name: tekton-results
  namespace: tekton-results
spec:
  port:
    targetPort: server
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: tekton-results-api-service
    weight: 100
  wildcardPolicy: None
